feat(incentives): create useIncentive hook and update alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "app/packs/*"
       ],
       "@api/*": ["app/javascript/api/*"],
+      "@hooks/*": ["app/javascript/hooks/*"],
     },
     "sourceMap": true,
     "target": "es5",
