--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.24",
     "@types/webpack-env": "^1.16.0",
@@ -34,6 +35,7 @@
     "eslint-config-preact": "^1.1.4",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.6",
+    "jest-fetch-mock": "^3.0.3",
     "webpack-dev-server": "^3.11.2"
   }
 }
